MDEV-37905: UNCACHEABLE_RAND inconsistently set on unions

We need to ensure that all the unions are marked as UNCACHEABLE_RAND in
cases like:
  select * from t1 where 1 in (select 1 union select 2 union select RAND());